fix deprecated warning.